# tokenkeeper

./: Cargo.toml  README.md
.agents/plugins/: marketplace.json
.flow/: params.yaml
.github/workflows/: ci.yml  homebrew.yml
Formula/: tokenkeeper.rb
SPECS/: PRD.md  Workplan.md
SPECS/ARCHIVE/: INDEX.md
SPECS/COMMANDS/: ARCHIVE.md  EXECUTE.md  FLOW.md  PLAN.md  PROGRESS.md  README.md  REBUILD.md  REVIEW.md  SELECT.md  SETUP.md
SPECS/INPROGRESS/: P1-T1_Bootstrap_Rust_Project.md  P1-T2_Research_Agent_and_Integration_Storage_Locations.md  P1-T3_Implement_Profile_Schema_and_Resolver.md  P2-T1_Implement_Unix_Metadata_Policies.md  P2-T3_Implement_macOS_ACL_Backend.md  P3-T1_Add_Built-in_Agent_and_Integration_Profiles.md  P3-T2_Complete_Security_Integration_Tests.md  P3-T2_Validation_Report.md  P4-T1_Publish_User_and_Security_Documentation.md  P4-T2_Add_Homebrew_Tap_Distribution.md  P4-T3_Evaluate_Linux_Support.md  P5-T10_Validation_Report.md  P5-T12_Validation_Report.md  P5-T13_Automate_the_Homebrew_Release_Lifecycle.md  P5-T14_Reconcile_the_Specification_Lifecycle.md  P5-T15_Validation_Report.md  P5-T16_Publish_Architecture-aware_Homebrew_Distribution_v0.2.3.md  next.md  (+9 more)
docs/: agent-storage-locations.md  homebrew.md  release-acceptance-checklist.md  security.md  v0.1.0-post-release-review.md
src/: acl.rs  cli.rs  identity.rs  inspector.rs  lib.rs  main.rs  profiles.rs  report.rs  resolver.rs
tests/: acl.rs  builtin_profiles.rs  cli_smoke.rs  metadata_policies.rs  native_security_acceptance.rs  profile_resolver.rs  reporting.rs  security_integration.rs
(+86 files in other folders)
