[package]
name = "tokenkeeper"
version = "0.2.2"
edition = "2021"
description = "Read-only permission auditor for AI agent credentials and configuration"
license = "MIT"
rust-version = "1.85"
repository = "https://github.com/SoundBlaster/tokenkeeper"
readme = "README.md"

[[bin]]
name = "tokenkeeper"
path = "src/main.rs"
